added consumable vertical
